# GuiTeXChord

./: .gitignore  README.md  grifftabelle.tex  v00.0.01guitar_chord_gui.py  v00.0.02guitar_chord_gui.py  v00.0.03guitar_chord_gui.py
ChordGen/: CMakeLists.txt  ChordData.h  ChordPreview.h  ChordWidget.cpp  ChordWidget.h  LatexGenerator.cpp  MainWindow.cpp  MainWindow.h  UnixQt.cmake  _structure.txt  main.cpp
ChordGen/src/: ChordPreview.cpp  ChordPreview.h  ChordWidget.cpp  LatexGenerator.h  MainWindow.cpp
GuiTeXChord/: CMakeLists.txt  README.md  SetupQt.cmake  _structure.txt  check_os.cmake
GuiTeXChord/src/: ChordData.h  ChordPreview.cpp  ChordPreview.h  ChordWidget.cpp  ChordWidget.h  LatexGenerator.cpp  LatexGenerator.h  MainWindow.cpp  MainWindow.h
GuiTeXChord/unix/: AppImageBuilder.yml  UnixQt.cmake  build.sh  config.sh  mingw-w64-toolchain.cmake  unix_cross.cmake  unix_native.cmake  unix_wsl.cmake
GuiTeXChord/win32/: SetupQt.cmake  win32.cmake
